CIRC-854: Rename emptyPeriod to zeroDurationPeriod.